# FateInjector_ARM32

./: CMakeLists.txt  README.md  build-arm32.bat
cmake/toolchains/: armv7-windows-mingw.cmake
src/: cMain.cpp
wxWidgets-3.2.0/include/wx/: ustring.h
